<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faef81"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewForAnswer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:hint="@string/calcResult"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:background="#28292a"
        app:layout_constraintStart_toStartOf="@id/key_1"
        app:layout_constraintEnd_toEndOf="@id/key_3"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/textViewForAnswer"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/textViewForAnswer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:layout_marginStart="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewForAnswer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@+id/key_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@+id/key_7"
        app:layout_constraintEnd_toEndOf="@+id/key_8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_9"
        app:layout_constraintEnd_toEndOf="@+id/key_9"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_plus"
        app:layout_constraintTop_toTopOf="@id/key_plus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_equls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_equals"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_minus"
        app:layout_constraintTop_toBottomOf="@id/key_dot" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_multiply"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/key_plus"
        app:layout_constraintTop_toBottomOf="@id/key_plus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_divide"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_multiply"
        app:layout_constraintTop_toBottomOf="@id/key_minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_backspace"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#28292a"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/key_divide"
        app:layout_constraintTop_toBottomOf="@id/key_equls" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>